--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.9.3",
     "framer-motion": "^7.2.1",
     "json-server": "^0.17.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
